test: searchGyms 메서드 테스트 작성